--- a/makefile.in
+++ b/makefile.in
@@ -21,7 +21,7 @@ datadir = @datadir@
 TOOLS_DEFAULT = @TOOLS_DEFAULT@
 DEMO_FORTRAN_DEFAULT = @DEMO_FORTRAN_DEFAULT@$(EXE)
 
-MCC = CC="$(CC)" PATH="$(PATH):$(srcdir)/tools" mcc
+MCC = CC="$(tools)/fcc" CXX="$(tools)/fcc" REALCC="$(CC)" PATH="$(PATH):$(tools)" mcc
 
 TARDIR = @PACKAGE_NAME@-@PACKAGE_VERSION@
 TARFILE = $(TARDIR).tar.gz
@@ -44,7 +44,7 @@ math: $(MATH)
 tools: $(TOOLS)
 
 
-install: lib math $(TOOLS_DEFAULT)
+install: lib $(TOOLS_DEFAULT)
 	$(INSTALL) -m 755 -d $(DESTDIR)$(libdir) \
 	                     $(DESTDIR)$(includedir) \
 	                     $(DESTDIR)$(bindir) \
@@ -76,151 +76,151 @@ demo = $(srcdir)/demo
 tools = $(srcdir)/tools
 
 
+COMMON_DEPS = $(common)/stddecl.h $(common)/debug.c \
+  $(common)/ChiSquare.c $(common)/Erf.c
+
+
 VEGAS_C = $(vegas)/Vegas.c
 VEGAS_TM = $(vegas)/Vegas.tm
-VEGAS_H = $(vegas)/decl.h $(common)/stddecl.h
-VEGAS_SRCS = $(VEGAS_H) $(common)/debug.c \
-  $(common)/Random.c $(common)/ChiSquare.c $(common)/Erf.c \
-  $(vegas)/util.c $(vegas)/common.c $(vegas)/Grid.c $(vegas)/Integrate.c
-VEGAS = $(VEGAS_C) $(VEGAS_TM) $(VEGAS_SRCS)
+VEGAS_DEPS = $(COMMON_DEPS) $(common)/Random.c \
+  $(vegas)/decl.h $(vegas)/util.c $(vegas)/common.c \
+  $(vegas)/Grid.c $(vegas)/Integrate.c
+VEGAS = $(VEGAS_C) $(VEGAS_TM) $(VEGAS_DEPS)
 
-$(LIB)(Vegas.o): $(VEGAS_C) $(VEGAS_SRCS)
-	$(CC) $(CFLAGS) -c -o Vegas.o $(VEGAS_C)
+$(LIB)(Vegas.o): $(VEGAS_C) $(VEGAS_DEPS)
+	$(CC) $(CFLAGS) -I$(vegas) -c -o Vegas.o $(VEGAS_C)
 	$(AR) $(ARFLAGS) $(LIB) Vegas.o
 	$(RM) Vegas.o
 
-$(LIB)(llVegas.o): $(VEGAS_C) $(VEGAS_SRCS)
-	$(CC) $(CFLAGS) -DLONGLONGINT -c -o llVegas.o $(VEGAS_C)
+$(LIB)(llVegas.o): $(VEGAS_C) $(VEGAS_DEPS)
+	$(CC) $(CFLAGS) -I$(vegas) -DLONGLONGINT -c -o llVegas.o $(VEGAS_C)
 	$(AR) $(ARFLAGS) $(LIB) llVegas.o
 	$(RM) llVegas.o
 
-$(LIB)(Vegas_.o): $(VEGAS_C) $(VEGAS_SRCS)
-	$(CC) $(CFLAGS) -DUNDERSCORE -c -o Vegas_.o $(VEGAS_C)
+$(LIB)(Vegas_.o): $(VEGAS_C) $(VEGAS_DEPS)
+	$(CC) $(CFLAGS) -I$(vegas) -DUNDERSCORE -c -o Vegas_.o $(VEGAS_C)
 	$(AR) $(ARFLAGS) $(LIB) Vegas_.o
 	$(RM) Vegas_.o
 
-$(LIB)(llVegas_.o): $(VEGAS_C) $(VEGAS_SRCS)
-	$(CC) $(CFLAGS) -DLONGLONGINT -DUNDERSCORE -c -o llVegas_.o $(VEGAS_C)
+$(LIB)(llVegas_.o): $(VEGAS_C) $(VEGAS_DEPS)
+	$(CC) $(CFLAGS) -I$(vegas) -DLONGLONGINT -DUNDERSCORE -c -o llVegas_.o $(VEGAS_C)
 	$(AR) $(ARFLAGS) $(LIB) llVegas_.o
 	$(RM) llVegas_.o
 
-Vegas$(EXE): $(VEGAS_TM) $(VEGAS_SRCS)
-	$(MCC) $(CFLAGS) -o Vegas$(EXE) $(VEGAS_TM)
+Vegas$(EXE): $(VEGAS_TM) $(VEGAS_DEPS)
+	$(MCC) $(MCFLAGS) $(CFLAGS) -I$(vegas) -o Vegas$(EXE) $(VEGAS_TM)
 	strip Vegas$(EXE)
 
 
 SUAVE_C = $(suave)/Suave.c
 SUAVE_TM = $(suave)/Suave.tm
-SUAVE_H = $(suave)/decl.h $(common)/stddecl.h
-SUAVE_SRCS = $(SUAVE_H) $(common)/debug.c \
-  $(common)/Random.c $(common)/ChiSquare.c $(common)/Erf.c \
-  $(suave)/util.c $(suave)/common.c $(suave)/Grid.c \
-  $(suave)/Fluct.c $(suave)/Sample.c $(suave)/Integrate.c
-SUAVE = $(SUAVE_C) $(SUAVE_TM) $(SUAVE_SRCS)
+SUAVE_DEPS = $(COMMON_DEPS) $(common)/Random.c \
+  $(suave)/decl.h $(suave)/util.c $(suave)/common.c \
+  $(suave)/Grid.c $(suave)/Fluct.c $(suave)/Sample.c \
+  $(suave)/Integrate.c
+SUAVE = $(SUAVE_C) $(SUAVE_TM) $(SUAVE_DEPS)
 
-$(LIB)(Suave.o): $(SUAVE_C) $(SUAVE_SRCS)
-	$(CC) $(CFLAGS) -c -o Suave.o $(SUAVE_C)
+$(LIB)(Suave.o): $(SUAVE_C) $(SUAVE_DEPS)
+	$(CC) $(CFLAGS) -I$(suave) -c -o Suave.o $(SUAVE_C)
 	$(AR) $(ARFLAGS) $(LIB) Suave.o
 	$(RM) Suave.o
 
-$(LIB)(llSuave.o): $(SUAVE_C) $(SUAVE_SRCS)
-	$(CC) $(CFLAGS) -DLONGLONGINT -c -o llSuave.o $(SUAVE_C)
+$(LIB)(llSuave.o): $(SUAVE_C) $(SUAVE_DEPS)
+	$(CC) $(CFLAGS) -I$(suave) -DLONGLONGINT -c -o llSuave.o $(SUAVE_C)
 	$(AR) $(ARFLAGS) $(LIB) llSuave.o
 	$(RM) llSuave.o
 
-$(LIB)(Suave_.o): $(SUAVE_C) $(SUAVE_SRCS)
-	$(CC) $(CFLAGS) -DUNDERSCORE -c -o Suave_.o $(SUAVE_C)
+$(LIB)(Suave_.o): $(SUAVE_C) $(SUAVE_DEPS)
+	$(CC) $(CFLAGS) -I$(suave) -DUNDERSCORE -c -o Suave_.o $(SUAVE_C)
 	$(AR) $(ARFLAGS) $(LIB) Suave_.o
 	$(RM) Suave_.o
 
-$(LIB)(llSuave_.o): $(SUAVE_C) $(SUAVE_SRCS)
-	$(CC) $(CFLAGS) -DLONGLONGINT -DUNDERSCORE -c -o llSuave_.o $(SUAVE_C)
+$(LIB)(llSuave_.o): $(SUAVE_C) $(SUAVE_DEPS)
+	$(CC) $(CFLAGS) -I$(suave) -DLONGLONGINT -DUNDERSCORE -c -o llSuave_.o $(SUAVE_C)
 	$(AR) $(ARFLAGS) $(LIB) llSuave_.o
 	$(RM) llSuave_.o
 
-Suave$(EXE): $(SUAVE_TM) $(SUAVE_SRCS)
-	$(MCC) $(CFLAGS) -o Suave$(EXE) $(SUAVE_TM)
+Suave$(EXE): $(SUAVE_TM) $(SUAVE_DEPS)
+	$(MCC) $(MCFLAGS) $(CFLAGS) -I$(suave) -o Suave$(EXE) $(SUAVE_TM)
 	strip Suave$(EXE)
 
 
 DIVONNE_C = $(divonne)/Divonne.c
 DIVONNE_F = $(divonne)/divonne-f.c
 DIVONNE_TM = $(divonne)/Divonne.tm
-DIVONNE_H = $(divonne)/decl.h $(common)/stddecl.h
-DIVONNE_SRCS = $(DIVONNE_H) $(common)/debug.c \
-  $(common)/Random.c $(common)/ChiSquare.c $(common)/Erf.c \
-  $(divonne)/util.c $(divonne)/common.c $(divonne)/KorobovCoeff.c \
-  $(divonne)/Rule.c $(divonne)/Sample.c $(divonne)/FindMinimum.c \
-  $(divonne)/Explore.c $(divonne)/Split.c $(divonne)/Integrate.c
-DIVONNE = $(DIVONNE_C) $(DIVONNE_F) $(DIVONNE_TM) $(DIVONNE_SRCS)
+DIVONNE_DEPS = $(COMMON_DEPS) $(common)/Random.c \
+  $(divonne)/decl.h $(divonne)/util.c $(divonne)/common.c \
+  $(divonne)/KorobovCoeff.c $(divonne)/Rule.c $(divonne)/Sample.c \
+  $(divonne)/FindMinimum.c $(divonne)/Explore.c $(divonne)/Split.c \
+  $(divonne)/Integrate.c
+DIVONNE = $(DIVONNE_C) $(DIVONNE_F) $(DIVONNE_TM) $(DIVONNE_DEPS)
 
-$(LIB)(Divonne.o): $(DIVONNE_C) $(DIVONNE_SRCS)
-	$(CC) $(CFLAGS) -c -o Divonne.o $(DIVONNE_C)
+$(LIB)(Divonne.o): $(DIVONNE_C) $(DIVONNE_DEPS)
+	$(CC) $(CFLAGS) -I$(divonne) -c -o Divonne.o $(DIVONNE_C)
 	$(AR) $(ARFLAGS) $(LIB) Divonne.o
 	$(RM) Divonne.o
 
-$(LIB)(llDivonne.o): $(DIVONNE_C) $(DIVONNE_SRCS)
-	$(CC) $(CFLAGS) -DLONGLONGINT -c -o llDivonne.o $(DIVONNE_C)
+$(LIB)(llDivonne.o): $(DIVONNE_C) $(DIVONNE_DEPS)
+	$(CC) $(CFLAGS) -I$(divonne) -DLONGLONGINT -c -o llDivonne.o $(DIVONNE_C)
 	$(AR) $(ARFLAGS) $(LIB) llDivonne.o
 	$(RM) llDivonne.o
 
-$(LIB)(Divonne_.o): $(DIVONNE_C) $(DIVONNE_SRCS)
-	$(CC) $(CFLAGS) -DUNDERSCORE -c -o Divonne_.o $(DIVONNE_C)
+$(LIB)(Divonne_.o): $(DIVONNE_C) $(DIVONNE_DEPS)
+	$(CC) $(CFLAGS) -I$(divonne) -DUNDERSCORE -c -o Divonne_.o $(DIVONNE_C)
 	$(AR) $(ARFLAGS) $(LIB) Divonne_.o
 	$(RM) Divonne_.o
 
-$(LIB)(llDivonne_.o): $(DIVONNE_C) $(DIVONNE_SRCS)
-	$(CC) $(CFLAGS) -DLONGLONGINT -DUNDERSCORE -c -o llDivonne_.o $(DIVONNE_C)
+$(LIB)(llDivonne_.o): $(DIVONNE_C) $(DIVONNE_DEPS)
+	$(CC) $(CFLAGS) -I$(divonne) -DLONGLONGINT -DUNDERSCORE -c -o llDivonne_.o $(DIVONNE_C)
 	$(AR) $(ARFLAGS) $(LIB) llDivonne_.o
 	$(RM) llDivonne_.o
 
-Divonne$(EXE): $(DIVONNE_TM) $(DIVONNE_SRCS)
-	$(MCC) $(CFLAGS) -o Divonne$(EXE) $(DIVONNE_TM)
+Divonne$(EXE): $(DIVONNE_TM) $(DIVONNE_DEPS)
+	$(MCC) $(MCFLAGS) $(CFLAGS) -I$(divonne) -o Divonne$(EXE) $(DIVONNE_TM)
 	strip Divonne$(EXE)
 
 
 CUHRE_C = $(cuhre)/Cuhre.c
 CUHRE_F = $(cuhre)/cuhre-f.c
 CUHRE_TM = $(cuhre)/Cuhre.tm
-CUHRE_H = $(cuhre)/decl.h $(common)/stddecl.h
-CUHRE_SRCS = $(CUHRE_H) $(common)/debug.c \
-  $(common)/ChiSquare.c $(common)/Erf.c \
-  $(cuhre)/util.c $(cuhre)/common.c $(cuhre)/Rule.c $(cuhre)/Integrate.c
-CUHRE = $(CUHRE_C) $(CUHRE_F) $(CUHRE_TM) $(CUHRE_SRCS)
+CUHRE_DEPS = $(COMMON_DEPS) \
+  $(cuhre)/decl.h $(cuhre)/util.c $(cuhre)/common.c \
+  $(cuhre)/Rule.c $(cuhre)/Integrate.c
+CUHRE = $(CUHRE_C) $(CUHRE_F) $(CUHRE_TM) $(CUHRE_DEPS)
 
-$(LIB)(Cuhre.o): $(CUHRE_C) $(CUHRE_SRCS)
-	$(CC) $(CFLAGS) -c -o Cuhre.o $(CUHRE_C)
+$(LIB)(Cuhre.o): $(CUHRE_C) $(CUHRE_DEPS)
+	$(CC) $(CFLAGS) -I$(cuhre) -c -o Cuhre.o $(CUHRE_C)
 	$(AR) $(ARFLAGS) $(LIB) Cuhre.o
 	$(RM) Cuhre.o
 
-$(LIB)(llCuhre.o): $(CUHRE_C) $(CUHRE_SRCS)
-	$(CC) $(CFLAGS) -DLONGLONGINT -c -o llCuhre.o $(CUHRE_C)
+$(LIB)(llCuhre.o): $(CUHRE_C) $(CUHRE_DEPS)
+	$(CC) $(CFLAGS) -I$(cuhre) -DLONGLONGINT -c -o llCuhre.o $(CUHRE_C)
 	$(AR) $(ARFLAGS) $(LIB) llCuhre.o
 	$(RM) llCuhre.o
 
-$(LIB)(Cuhre_.o): $(CUHRE_C) $(CUHRE_SRCS)
-	$(CC) $(CFLAGS) -DUNDERSCORE -c -o Cuhre_.o $(CUHRE_C)
+$(LIB)(Cuhre_.o): $(CUHRE_C) $(CUHRE_DEPS)
+	$(CC) $(CFLAGS) -I$(cuhre) -DUNDERSCORE -c -o Cuhre_.o $(CUHRE_C)
 	$(AR) $(ARFLAGS) $(LIB) Cuhre_.o
 	$(RM) Cuhre_.o
 
-$(LIB)(llCuhre_.o): $(CUHRE_C) $(CUHRE_SRCS)
-	$(CC) $(CFLAGS) -DLONGLONGINT -DUNDERSCORE -c -o llCuhre_.o $(CUHRE_C)
+$(LIB)(llCuhre_.o): $(CUHRE_C) $(CUHRE_DEPS)
+	$(CC) $(CFLAGS) -I$(cuhre) -DLONGLONGINT -DUNDERSCORE -c -o llCuhre_.o $(CUHRE_C)
 	$(AR) $(ARFLAGS) $(LIB) llCuhre_.o
 	$(RM) llCuhre_.o
 
-Cuhre$(EXE): $(CUHRE_TM) $(CUHRE_SRCS)
-	$(MCC) $(CFLAGS) -o Cuhre$(EXE) $(CUHRE_TM)
+Cuhre$(EXE): $(CUHRE_TM) $(CUHRE_DEPS)
+	$(MCC) $(MCFLAGS) $(CFLAGS) -I$(cuhre) -o Cuhre$(EXE) $(CUHRE_TM)
 	strip Cuhre$(EXE)
 
 
-$(LIB): $(LIB)(Vegas.o)     $(LIB)(llVegas.o)    \
-        $(LIB)(Vegas_.o)    $(LIB)(llVegas_.o)   \
-        $(LIB)(Suave.o)     $(LIB)(llSuave.o)    \
-        $(LIB)(Suave_.o)    $(LIB)(llSuave_.o)   \
-        $(LIB)(Divonne.o)   $(LIB)(llDivonne.o)  \
-        $(LIB)(Divonne_.o)  $(LIB)(llDivonne_.o) \
-        $(LIB)(Cuhre.o)     $(LIB)(llCuhre.o)    \
-        $(LIB)(Cuhre_.o)    $(LIB)(llCuhre_.o)
+$(LIB): $(LIB)(Vegas.o)     $(LIB)(Vegas_.o)    \
+	$(LIB)(llVegas.o)   $(LIB)(llVegas_.o)   \
+	$(LIB)(Suave.o)     $(LIB)(Suave_.o)    \
+	$(LIB)(llSuave.o)   $(LIB)(llSuave_.o)   \
+	$(LIB)(Divonne.o)   $(LIB)(Divonne_.o)  \
+	$(LIB)(llDivonne.o) $(LIB)(llDivonne_.o) \
+	$(LIB)(Cuhre.o)     $(LIB)(Cuhre_.o)    \
+	$(LIB)(llCuhre.o)   $(LIB)(llCuhre_.o)
 	-$(RANLIB) $(LIB)
 
 
@@ -250,8 +250,8 @@ TARCONTENTS = $(srcdir)/ChangeLog $(srcdir)/configure \
   $(srcdir)/makefile.in $(srcdir)/config.h.in \
   $(srcdir)/cuba.pdf $(srcdir)/cuba.h \
   $(VEGAS) $(SUAVE) $(DIVONNE) $(CUHRE) \
-  $(DEMO) $(PARTVIEW) $(tools)/partview.m $(tools)/mcc
-
+  $(DEMO) $(PARTVIEW) $(tools)/partview.m \
+  $(tools)/mcc $(tools)/fcc $(tools)/mkstatic
 
 dist:
 	ln -s . $(TARDIR)
