--- a/configure.ac
+++ b/configure.ac
@@ -1,7 +1,7 @@
 # Process this file with autoconf to produce a configure script.
 
 AC_PREREQ(2.59)
-AC_INIT([Cuba], [1.7], [hahn@feynarts.de])
+AC_INIT([Cuba], [2.0], [hahn@feynarts.de])
 AC_CONFIG_SRCDIR([cuba.h])
 
 LIBS=-lm
@@ -13,7 +13,11 @@ AC_PROG_RANLIB
 AC_PROG_INSTALL
 
 if test "$GCC" = yes ; then
-  CFLAGS=${USER_CFLAGS:--O3 -fomit-frame-pointer -ffast-math}
+  opt=-O3
+  case `$CC --version 2>&1 < /dev/null` in
+  gcc*4.2* | gcc*4.4.3*) opt=-O0 ;;
+  esac
+  CFLAGS=${USER_CFLAGS:-$opt -fomit-frame-pointer -ffast-math}
 else
   CFLAGS=${USER_CFLAGS:--O}
 fi
