--- a/configure.ac
+++ b/configure.ac
@@ -1,26 +1,26 @@
 # Process this file with autoconf to produce a configure script.
 
 AC_PREREQ(2.59)
-AC_INIT([Cuba], [2.0], [hahn@feynarts.de])
+AC_INIT([Cuba], [2.1], [hahn@feynarts.de])
 AC_CONFIG_SRCDIR([cuba.h])
 
 LIBS=-lm
 USER_CFLAGS="$CFLAGS"
+
+AC_ARG_VAR(MCFLAGS, [MathLink C compiler flags])
 
 AC_PROG_CC
 AC_PROG_F77
 AC_PROG_RANLIB
 AC_PROG_INSTALL
 
-if test "$GCC" = yes ; then
-  opt=-O3
-  case `$CC --version 2>&1 < /dev/null` in
-  gcc*4.2* | gcc*4.4.3*) opt=-O0 ;;
-  esac
-  CFLAGS=${USER_CFLAGS:-$opt -fomit-frame-pointer -ffast-math}
-else
-  CFLAGS=${USER_CFLAGS:--O}
-fi
+AS_IF([test "$GCC" = yes],
+  [AS_CASE([`$CC --version 2>&1 < /dev/null`],
+    [*LLVM*], [opt=-O3],
+    [*gcc*4.2* | *gcc*4.4.3*], [opt=-O0],
+    [opt=-O3])
+   CFLAGS=${USER_CFLAGS:-$opt -fomit-frame-pointer -ffast-math}],
+  [CFLAGS=${USER_CFLAGS:--O}])
 
 AC_C_CONST
 AC_C_INLINE
@@ -45,8 +45,7 @@ AC_ARG_WITH(maxcomp,
 
 AC_MSG_CHECKING([for variable-size arrays])
 AC_COMPILE_IFELSE([AC_LANG_SOURCE(,[[
-	void test(int n)
-	{
+	void test(int n) {
 	  char s[n];
 	}
   ]])],
@@ -55,6 +54,34 @@ AC_COMPILE_IFELSE([AC_LANG_SOURCE(,[[
    AC_DEFINE_UNQUOTED([NDIM], [$MAXDIM], [Maximum number of components])
    AC_DEFINE_UNQUOTED([NCOMP], [$MAXCOMP], [Maximum number of dimensions])]
 )
+
+AC_MSG_CHECKING([for MathLink])
+cat > conftest.tm << _EOF_
+:Begin:
+:Function: inc
+:Pattern: Inc[i_Integer]
+:Arguments: {i}
+:ArgumentTypes: {Integer}
+:ReturnType: Integer
+:End:
+
+#include "mathlink.h"
+
+static int inc(const int i) { return i + 1; }
+
+int main(int argc, char **argv) {
+  return MLMain(argc, argv);
+}
+_EOF_
+FCC="$srcdir/tools/fcc"
+rm -f conftest$EXEEXT
+REALCC="$CC" CC="$FCC" CXX="$FCC" PATH="$PATH:$srcdir/tools" \
+  mcc $MCFLAGS $CFLAGS -o conftest$EXEEXT conftest.tm > /dev/null 2>&1
+AS_IF([test -x conftest$EXEEXT],
+  [AC_MSG_RESULT([yes])
+   MATH_DEFAULT=math],
+  [AC_MSG_RESULT([no])])
+AC_SUBST([MATH_DEFAULT])
 
 AC_CHECK_PROGS([HAVE_QMAKE], [qmake])
 test -n "$HAVE_QMAKE" && TOOLS_DEFAULT=tools
