--- a/configure.ac
+++ b/configure.ac
@@ -1,7 +1,7 @@
 # Process this file with autoconf to produce a configure script.
 
 AC_PREREQ(2.59)
-AC_INIT([Cuba], [2.1], [hahn@feynarts.de])
+AC_INIT([Cuba], [3.0], [hahn@feynarts.de])
 AC_CONFIG_SRCDIR([cuba.h])
 
 LIBS=-lm
@@ -28,6 +28,7 @@ AC_C_LONG_DOUBLE
 
 AC_CHECK_FUNCS([powl])
 AC_CHECK_FUNCS([erf])
+AC_CHECK_FUNCS([getloadavg])
 
 MAXDIM=${MAXDIM:-16}
 AC_ARG_WITH(maxdim,
