--- a/makefile.in
+++ b/makefile.in
@@ -79,136 +79,136 @@ demo = $(srcdir)/demo
 tools = $(srcdir)/tools
 
 
-COMMON_DEPS = $(common)/stddecl.h $(common)/ChiSquare.c $(common)/Erf.c
-
+COMMON_TMDEPS = $(common)/stddecl.h $(common)/ChiSquare.c $(common)/Erf.c
+COMMON_CDEPS = $(COMMON_TMDEPS) $(common)/DoSample.c
 
 VEGAS_C = $(vegas)/Vegas.c
 VEGAS_TM = $(vegas)/Vegas.tm
-VEGAS_DEPS = $(COMMON_DEPS) $(common)/Random.c \
+VEGAS_DEPS = $(common)/Random.c \
   $(vegas)/decl.h $(vegas)/common.c \
   $(vegas)/Grid.c $(vegas)/Integrate.c
 VEGAS = $(VEGAS_C) $(VEGAS_TM) $(VEGAS_DEPS)
 
-$(LIB)(Vegas.o): $(VEGAS_C) $(VEGAS_DEPS)
-	$(CC) $(CFLAGS) -I$(vegas) -c -o Vegas.o $(VEGAS_C)
+$(LIB)(Vegas.o): $(VEGAS_C) $(VEGAS_DEPS) $(COMMON_CDEPS) 
+	$(CC) $(CFLAGS) -I$(vegas) -DNOUNDERSCORE -c -o Vegas.o $(VEGAS_C)
 	$(AR) $(ARFLAGS) $(LIB) Vegas.o
 	$(RM) Vegas.o
 
-$(LIB)(llVegas.o): $(VEGAS_C) $(VEGAS_DEPS)
-	$(CC) $(CFLAGS) -I$(vegas) -DLONGLONGINT -c -o llVegas.o $(VEGAS_C)
+$(LIB)(llVegas.o): $(VEGAS_C) $(VEGAS_DEPS) $(COMMON_CDEPS)
+	$(CC) $(CFLAGS) -I$(vegas) -DLONGLONGINT -DNOUNDERSCORE -c -o llVegas.o $(VEGAS_C)
 	$(AR) $(ARFLAGS) $(LIB) llVegas.o
 	$(RM) llVegas.o
 
-$(LIB)(Vegas_.o): $(VEGAS_C) $(VEGAS_DEPS)
-	$(CC) $(CFLAGS) -I$(vegas) -DUNDERSCORE -c -o Vegas_.o $(VEGAS_C)
+$(LIB)(Vegas_.o): $(VEGAS_C) $(VEGAS_DEPS) $(COMMON_CDEPS)
+	$(CC) $(CFLAGS) -I$(vegas) -c -o Vegas_.o $(VEGAS_C)
 	$(AR) $(ARFLAGS) $(LIB) Vegas_.o
 	$(RM) Vegas_.o
 
-$(LIB)(llVegas_.o): $(VEGAS_C) $(VEGAS_DEPS)
-	$(CC) $(CFLAGS) -I$(vegas) -DLONGLONGINT -DUNDERSCORE -c -o llVegas_.o $(VEGAS_C)
+$(LIB)(llVegas_.o): $(VEGAS_C) $(VEGAS_DEPS) $(COMMON_CDEPS)
+	$(CC) $(CFLAGS) -I$(vegas) -DLONGLONGINT -c -o llVegas_.o $(VEGAS_C)
 	$(AR) $(ARFLAGS) $(LIB) llVegas_.o
 	$(RM) llVegas_.o
 
-Vegas$(EXE): $(VEGAS_TM) $(VEGAS_DEPS)
+Vegas$(EXE): $(VEGAS_TM) $(VEGAS_DEPS) $(COMMON_TMDEPS)
 	$(MCC) $(MCFLAGS) $(CFLAGS) -I$(vegas) -o Vegas$(EXE) $(VEGAS_TM)
 	strip Vegas$(EXE)
 
 
 SUAVE_C = $(suave)/Suave.c
 SUAVE_TM = $(suave)/Suave.tm
-SUAVE_DEPS = $(COMMON_DEPS) $(common)/Random.c \
+SUAVE_DEPS = $(common)/Random.c \
   $(suave)/decl.h $(suave)/common.c \
   $(suave)/Grid.c $(suave)/Fluct.c $(suave)/Sample.c \
   $(suave)/Integrate.c
 SUAVE = $(SUAVE_C) $(SUAVE_TM) $(SUAVE_DEPS)
 
-$(LIB)(Suave.o): $(SUAVE_C) $(SUAVE_DEPS)
-	$(CC) $(CFLAGS) -I$(suave) -c -o Suave.o $(SUAVE_C)
+$(LIB)(Suave.o): $(SUAVE_C) $(SUAVE_DEPS) $(COMMON_CDEPS)
+	$(CC) $(CFLAGS) -I$(suave) -DNOUNDERSCORE -c -o Suave.o $(SUAVE_C)
 	$(AR) $(ARFLAGS) $(LIB) Suave.o
 	$(RM) Suave.o
 
-$(LIB)(llSuave.o): $(SUAVE_C) $(SUAVE_DEPS)
-	$(CC) $(CFLAGS) -I$(suave) -DLONGLONGINT -c -o llSuave.o $(SUAVE_C)
+$(LIB)(llSuave.o): $(SUAVE_C) $(SUAVE_DEPS) $(COMMON_CDEPS)
+	$(CC) $(CFLAGS) -I$(suave) -DLONGLONGINT -DNOUNDERSCORE -c -o llSuave.o $(SUAVE_C)
 	$(AR) $(ARFLAGS) $(LIB) llSuave.o
 	$(RM) llSuave.o
 
-$(LIB)(Suave_.o): $(SUAVE_C) $(SUAVE_DEPS)
-	$(CC) $(CFLAGS) -I$(suave) -DUNDERSCORE -c -o Suave_.o $(SUAVE_C)
+$(LIB)(Suave_.o): $(SUAVE_C) $(SUAVE_DEPS) $(COMMON_CDEPS)
+	$(CC) $(CFLAGS) -I$(suave) -c -o Suave_.o $(SUAVE_C)
 	$(AR) $(ARFLAGS) $(LIB) Suave_.o
 	$(RM) Suave_.o
 
-$(LIB)(llSuave_.o): $(SUAVE_C) $(SUAVE_DEPS)
-	$(CC) $(CFLAGS) -I$(suave) -DLONGLONGINT -DUNDERSCORE -c -o llSuave_.o $(SUAVE_C)
+$(LIB)(llSuave_.o): $(SUAVE_C) $(SUAVE_DEPS) $(COMMON_CDEPS)
+	$(CC) $(CFLAGS) -I$(suave) -DLONGLONGINT -c -o llSuave_.o $(SUAVE_C)
 	$(AR) $(ARFLAGS) $(LIB) llSuave_.o
 	$(RM) llSuave_.o
 
-Suave$(EXE): $(SUAVE_TM) $(SUAVE_DEPS)
+Suave$(EXE): $(SUAVE_TM) $(SUAVE_DEPS) $(COMMON_TMDEPS)
 	$(MCC) $(MCFLAGS) $(CFLAGS) -I$(suave) -o Suave$(EXE) $(SUAVE_TM)
 	strip Suave$(EXE)
 
 
 DIVONNE_C = $(divonne)/Divonne.c
 DIVONNE_TM = $(divonne)/Divonne.tm
-DIVONNE_DEPS = $(COMMON_DEPS) $(common)/Random.c \
+DIVONNE_DEPS = $(common)/Random.c \
   $(divonne)/decl.h $(divonne)/common.c \
   $(divonne)/KorobovCoeff.c $(divonne)/Rule.c $(divonne)/Sample.c \
-  $(divonne)/FindMinimum.c $(divonne)/Explore.c $(divonne)/Split.c \
-  $(divonne)/Integrate.c
+  $(divonne)/FindMinimum.c $(divonne)/Iterate.c $(divonne)/Explore.c \
+  $(divonne)/Split.c $(divonne)/Integrate.c
 DIVONNE = $(DIVONNE_C) $(DIVONNE_TM) $(DIVONNE_DEPS)
 
-$(LIB)(Divonne.o): $(DIVONNE_C) $(DIVONNE_DEPS)
-	$(CC) $(CFLAGS) -I$(divonne) -c -o Divonne.o $(DIVONNE_C)
+$(LIB)(Divonne.o): $(DIVONNE_C) $(DIVONNE_DEPS) $(COMMON_CDEPS)
+	$(CC) $(CFLAGS) -I$(divonne) -DNOUNDERSCORE -c -o Divonne.o $(DIVONNE_C)
 	$(AR) $(ARFLAGS) $(LIB) Divonne.o
 	$(RM) Divonne.o
 
-$(LIB)(llDivonne.o): $(DIVONNE_C) $(DIVONNE_DEPS)
-	$(CC) $(CFLAGS) -I$(divonne) -DLONGLONGINT -c -o llDivonne.o $(DIVONNE_C)
+$(LIB)(llDivonne.o): $(DIVONNE_C) $(DIVONNE_DEPS) $(COMMON_CDEPS)
+	$(CC) $(CFLAGS) -I$(divonne) -DLONGLONGINT -DNOUNDERSCORE -c -o llDivonne.o $(DIVONNE_C)
 	$(AR) $(ARFLAGS) $(LIB) llDivonne.o
 	$(RM) llDivonne.o
 
-$(LIB)(Divonne_.o): $(DIVONNE_C) $(DIVONNE_DEPS)
-	$(CC) $(CFLAGS) -I$(divonne) -DUNDERSCORE -c -o Divonne_.o $(DIVONNE_C)
+$(LIB)(Divonne_.o): $(DIVONNE_C) $(DIVONNE_DEPS) $(COMMON_CDEPS)
+	$(CC) $(CFLAGS) -I$(divonne) -c -o Divonne_.o $(DIVONNE_C)
 	$(AR) $(ARFLAGS) $(LIB) Divonne_.o
 	$(RM) Divonne_.o
 
-$(LIB)(llDivonne_.o): $(DIVONNE_C) $(DIVONNE_DEPS)
-	$(CC) $(CFLAGS) -I$(divonne) -DLONGLONGINT -DUNDERSCORE -c -o llDivonne_.o $(DIVONNE_C)
+$(LIB)(llDivonne_.o): $(DIVONNE_C) $(DIVONNE_DEPS) $(COMMON_CDEPS)
+	$(CC) $(CFLAGS) -I$(divonne) -DLONGLONGINT -c -o llDivonne_.o $(DIVONNE_C)
 	$(AR) $(ARFLAGS) $(LIB) llDivonne_.o
 	$(RM) llDivonne_.o
 
-Divonne$(EXE): $(DIVONNE_TM) $(DIVONNE_DEPS)
+Divonne$(EXE): $(DIVONNE_TM) $(DIVONNE_DEPS) $(COMMON_TMDEPS)
 	$(MCC) $(MCFLAGS) $(CFLAGS) -I$(divonne) -o Divonne$(EXE) $(DIVONNE_TM)
 	strip Divonne$(EXE)
 
 
 CUHRE_C = $(cuhre)/Cuhre.c
 CUHRE_TM = $(cuhre)/Cuhre.tm
-CUHRE_DEPS = $(COMMON_DEPS) \
+CUHRE_DEPS = \
   $(cuhre)/decl.h $(cuhre)/common.c \
   $(cuhre)/Rule.c $(cuhre)/Integrate.c
 CUHRE = $(CUHRE_C) $(CUHRE_TM) $(CUHRE_DEPS)
 
-$(LIB)(Cuhre.o): $(CUHRE_C) $(CUHRE_DEPS)
-	$(CC) $(CFLAGS) -I$(cuhre) -c -o Cuhre.o $(CUHRE_C)
+$(LIB)(Cuhre.o): $(CUHRE_C) $(CUHRE_DEPS) $(COMMON_CDEPS)
+	$(CC) $(CFLAGS) -I$(cuhre) -DNOUNDERSCORE -c -o Cuhre.o $(CUHRE_C)
 	$(AR) $(ARFLAGS) $(LIB) Cuhre.o
 	$(RM) Cuhre.o
 
-$(LIB)(llCuhre.o): $(CUHRE_C) $(CUHRE_DEPS)
-	$(CC) $(CFLAGS) -I$(cuhre) -DLONGLONGINT -c -o llCuhre.o $(CUHRE_C)
+$(LIB)(llCuhre.o): $(CUHRE_C) $(CUHRE_DEPS) $(COMMON_CDEPS)
+	$(CC) $(CFLAGS) -I$(cuhre) -DLONGLONGINT -DNOUNDERSCORE -c -o llCuhre.o $(CUHRE_C)
 	$(AR) $(ARFLAGS) $(LIB) llCuhre.o
 	$(RM) llCuhre.o
 
-$(LIB)(Cuhre_.o): $(CUHRE_C) $(CUHRE_DEPS)
-	$(CC) $(CFLAGS) -I$(cuhre) -DUNDERSCORE -c -o Cuhre_.o $(CUHRE_C)
+$(LIB)(Cuhre_.o): $(CUHRE_C) $(CUHRE_DEPS) $(COMMON_CDEPS)
+	$(CC) $(CFLAGS) -I$(cuhre) -c -o Cuhre_.o $(CUHRE_C)
 	$(AR) $(ARFLAGS) $(LIB) Cuhre_.o
 	$(RM) Cuhre_.o
 
-$(LIB)(llCuhre_.o): $(CUHRE_C) $(CUHRE_DEPS)
-	$(CC) $(CFLAGS) -I$(cuhre) -DLONGLONGINT -DUNDERSCORE -c -o llCuhre_.o $(CUHRE_C)
+$(LIB)(llCuhre_.o): $(CUHRE_C) $(CUHRE_DEPS) $(COMMON_CDEPS)
+	$(CC) $(CFLAGS) -I$(cuhre) -DLONGLONGINT -c -o llCuhre_.o $(CUHRE_C)
 	$(AR) $(ARFLAGS) $(LIB) llCuhre_.o
 	$(RM) llCuhre_.o
 
-Cuhre$(EXE): $(CUHRE_TM) $(CUHRE_DEPS)
+Cuhre$(EXE): $(CUHRE_TM) $(CUHRE_DEPS) $(COMMON_TMDEPS)
 	$(MCC) $(MCFLAGS) $(CFLAGS) -I$(cuhre) -o Cuhre$(EXE) $(CUHRE_TM)
 	strip Cuhre$(EXE)
 
@@ -249,7 +249,7 @@ TARCONTENTS = $(srcdir)/COPYING $(srcdir)/ChangeLog \
   $(srcdir)/configure $(srcdir)/configure.ac $(srcdir)/install-sh \
   $(srcdir)/makefile.in $(srcdir)/config.h.in \
   $(srcdir)/cuba.pdf $(srcdir)/cuba.h \
-  $(VEGAS) $(SUAVE) $(DIVONNE) $(CUHRE) \
+  $(COMMON_CDEPS) $(VEGAS) $(SUAVE) $(DIVONNE) $(CUHRE) \
   $(DEMO) $(PARTVIEW) $(tools)/partview.m \
   $(tools)/mcc $(tools)/fcc $(tools)/mkstatic
 
