--- a/config.h.in
+++ b/config.h.in
@@ -3,6 +3,9 @@
 /* Define to 1 if you have the `erf' function. */
 #undef HAVE_ERF
 
+/* Define to 1 if you have the `fork' function. */
+#undef HAVE_FORK
+
 /* Define to 1 if you have the `getloadavg' function. */
 #undef HAVE_GETLOADAVG
 
@@ -16,6 +19,9 @@
 
 /* Define to 1 if you have the `powl' function. */
 #undef HAVE_POWL
+
+/* Define to 1 if you have the `shmget' function. */
+#undef HAVE_SHMGET
 
 /* Maximum number of dimensions */
 #undef NCOMP
